# author="Daniel Deutsch"
[project]
name = "sacrerouge"
version = "0.2.5"
description="An open-source library for summarization evaluation metrics"
requires-python= ">=3.11"
dependencies = [
    "googledrivedownloader",
    "jsons",
    "lxml",
    "matplotlib",
    "nltk",
    "numpy",
    "overrides==3.1.0",
    # "pytest",
    # "repro==0.1.1",
    "requests",
    "scipy>=1.5.2",
    "sacrebleu==2.5.0"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters]

